--- a/Dairy_Care_System/templates/editproduct.html
+++ b/Dairy_Care_System/templates/editproduct.html
@@ -9,7 +9,7 @@
 
     <style>
         body {
-            background: url('{% static "images/prolist.jpg" %}') no-repeat center center fixed;
+            background: url('{% static "images/productslist.jpg" %}') no-repeat center center fixed;
             background-size: cover;
             margin: 0;
         }
