--- a/Dairy_Care_System/templates/forgotpassword.html
+++ b/Dairy_Care_System/templates/forgotpassword.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forgot Password Page</title>
     <link rel="stylesheet" href="{% static 'css/forgotpassword.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Font Awesome CDN -->
     <style>
         body {
-            background: url('{% static "images/for.png" %}') no-repeat center center fixed;
+            background: url('{% static "images/forgotpassword.jpg" %}') no-repeat center center fixed;
             background-size: cover;
             font-family: 'Koh Santepheap', Arial, sans-serif;
         }
@@ -20,8 +21,8 @@
     
 </head>
 <body>
-    <a href="{% url 'home' %}" class="home-link">
-        <img src="{% static 'images/homeblack.jpg' %}" alt="Home">
+    <a href="{% url 'home' %}">
+        <i class="fas fa-home home-icon"></i>
     </a>
     <div class="container">
         <div class="forgot-box">
