--- a/Dairy_Care_System/templates/productstock.html
+++ b/Dairy_Care_System/templates/productstock.html
@@ -8,7 +8,7 @@
     <style>
         /* General Body Styling */
         body {
-            background: url("{% static 'images/cbcbcb.jpg' %}") no-repeat center center fixed;
+            background: url("{% static 'images/productstock.jpg' %}") no-repeat center center fixed;
             background-size: cover;
             font-family: 'Arial', sans-serif;
             color: #333;
