--- a/Dairy_Care_System/templates/registration.html
+++ b/Dairy_Care_System/templates/registration.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Font Awesome CDN -->
     <style>
         body {
-            background: url('{% static "images/signin.jpg" %}') no-repeat center center fixed;
+            background: url('{% static "images/registration.jpg" %}') no-repeat center center fixed;
             background-size: cover;
             font-family: Arial, sans-serif;
         }
