--- a/Dairy_Care_System/templates/reguserlist.html
+++ b/Dairy_Care_System/templates/reguserlist.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{% static 'css/reguserlist.css' %}">
     <style>
         body {
-            background: url('{% static "images/regview.jpg" %}') no-repeat center center fixed;
+            background: url('{% static "images/reguserview.jpg" %}') no-repeat center center fixed;
             background-size: cover;
             margin: 0;
         }
