--- a/Dairy_Care_System/dairy/static/css/about.css
+++ b/Dairy_Care_System/dairy/static/css/about.css
@@ -63,7 +63,7 @@ ul {
     max-width: 1300px;
     margin: 15px auto;
     padding: 25px;
-    background-color: #fff;
+    backdrop-filter: blur(30px); /* Blur effect */
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
 }
@@ -101,14 +101,16 @@ h1 {
 
 /* Paragraph style */
 p {
-    font-size: 15px;
+    font-size: 20px;
     line-height: 1.6;
     margin-bottom: 15px;
 }
 
 /* Subheader (h2) style */
 h2 {
-    font-size: 20px;
+    font-size: 30px;
+    font-weight: bold;
+    font-style: italic;
     margin-bottom: 15px;
     color: #8b771b;
 }
