--- a/Dairy_Care_System/dairy/static/css/forgotpassword.css
+++ b/Dairy_Care_System/dairy/static/css/forgotpassword.css
@@ -54,7 +54,7 @@ h2 {
     background-color: black;
 }
 
-.home-link {
+/* .home-link {
     position: absolute;
     top: 20px;
     right: 20px;
@@ -64,7 +64,7 @@ h2 {
 .home-link img {
     width: 50px;
     height: 50px;
-}
+} */
 
 .error-message {
     color: red;
@@ -84,4 +84,12 @@ h2 {
     font-size: 14px;
     text-decoration: underline;
     font-family: 'Comic Sans MS', cursive;
+}
+
+.home-icon {
+    color: #ffffff; /* Color for the home icon */
+    margin-right: 20px; /* Space from the left edge */
+    margin-top: 10px; /* Space from the top of the header */
+    float: right; /* Aligns the icon to the left */
+    font-size: 45px; /* Increase the size of the icon (adjust as needed) */
 }
