--- a/Dairy_Care_System/templates/about.html
+++ b/Dairy_Care_System/templates/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Font Awesome CDN -->
     <style>
         body {
-            background: url('{% static "images/about.jpg" %}') no-repeat center center fixed;
+            background: url('{% static "images/about.png" %}') no-repeat center center fixed;
             background-size: cover;
             font-family: Arial, sans-serif;
         }
@@ -60,9 +60,9 @@
         Experience the benefits of Dairy Care System and see how our platform can transform your farm operations and shopping experience. Whether you're managing farm activities or purchasing dairy products, our system is here to support your needs with efficiency and ease.
     </p><br>
 
-    <footer>
+    <footer><b>
         <p>&copy; 2024 Dairy Care System. All rights reserved.</p>
-    </footer>
+    </b></footer>
 
 </div>
 
