--- a/Dairy_Care_System/templates/contactus.html
+++ b/Dairy_Care_System/templates/contactus.html
@@ -9,10 +9,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Font Awesome CDN -->
     <style>
         body {
-            background: url('{% static "images/contactus.jpeg" %}') no-repeat center center fixed;
+            background: url('{% static "images/contactus.jpg" %}') no-repeat center center fixed;
             background-size: cover;
             font-family: Arial, sans-serif;
         }
+
+        footer {
+    position: absolute;
+    bottom: 20px; /* Adjust this value to move it upwards */
+    width: 98%;
+    text-align: center;
+    color: black;
+}
     </style>
 </head>
 <body>
@@ -51,12 +59,17 @@
             <div><i class="fas fa-user" style="margin-right: 10px; color: #0853a4;"></i> <strong>Name:</strong> Admin</div><br>
             <div><i class="fas fa-envelope" style="margin-right: 10px; color: #0853a4;"></i> <strong>Email:</strong> Admin11@gmail.com</div><br>
             <div><i class="fas fa-phone" style="margin-right: 10px; color: #0853a4;"></i> <strong>Phone Number:</strong> 6282752569</div><br>
-            <div><i class="fas fa-map-pin" style="margin-right: 10px; color: #0853a4;"></i> <strong>Pincode:</strong> 686505</div><br>
-            <div><i class="fas fa-map-marker-alt" style="margin-right: 10px; color: #0853a4;"></i>  <strong>District:</strong> Kottayam</div>
+            <div>
+             <!-- Google Map Embed -->
+            <iframe 
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3934.770800832792!2d76.82088187478715!3d9.528631790554039!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b063626ed32c771%3A0xff305e1affdbb4b4!2sAmal%20Jyothi%20College%20of%20Engineering!5e0!3m2!1sen!2sin!4v1729184899787!5m2!1sen!2sin" 
+              width="350" height="100" style="border:0;" 
+              allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
         </div>
-    </div>
+    </div></div>
     <center><footer>
-        <p>&copy; 2024 Dairy Care System. All rights reserved.</p>
+        <b><p>&copy; 2024 Dairy Care System. All rights reserved.</p></b>
     </center></footer>
 </body>
 </html>
