--- a/Dairy_Care_System/templates/employeepage.html
+++ b/Dairy_Care_System/templates/employeepage.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{% static 'css/employeepage.css' %}">
     <style>
         body {
-            background: url('{% static "images/nnnn.jpg" %}') no-repeat center center fixed;
+            background: url('{% static "images/employeepage.jpg" %}') no-repeat center center fixed;
             background-size: cover;
             margin: 0;
             margin-left: 250px; /* Adjusting body margin to make space for the fixed sidebar */
