--- a/Dairy_Care_System/templates/productslist.html
+++ b/Dairy_Care_System/templates/productslist.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
-            background: url('{% static "images/prolist.jpg" %}') no-repeat center center fixed;
+            background: url('{% static "images/productslist.jpg" %}') no-repeat center center fixed;
             background-size: cover;
             margin: 0;
         }
