--- a/Dairy_Care_System/templates/regmailverify.html
+++ b/Dairy_Care_System/templates/regmailverify.html
@@ -18,7 +18,7 @@
         }
 
         body {
-            background: url("{% static 'images/mailverify.jpg' %}") no-repeat center center fixed;
+            background: url("{% static 'images/regverify.jpg' %}") no-repeat center center fixed;
             background-size: cover;
             display: flex;
             flex-direction: column;
@@ -174,6 +174,7 @@
         footer {
             text-align: center;
             padding: 10px 0;
+            color: #ffffff;
             position: relative;
         }
     </style>
