--- a/Dairy_Care_System/templates/regotpverify.html
+++ b/Dairy_Care_System/templates/regotpverify.html
@@ -17,7 +17,7 @@
         }
 
         body {
-            background: url("{% static 'images/mailverify.jpg' %}") no-repeat center center fixed;
+            background: url("{% static 'images/regverify.jpg' %}") no-repeat center center fixed;
             background-size: cover;
             display: flex;
             flex-direction: column;
@@ -172,6 +172,7 @@
 
         footer {
             text-align: center;
+            color: #ffffff;
             padding: 10px 0;
             position: relative;
         }
