--- a/Dairy_Care_System/templates/updateuserprofile.html
+++ b/Dairy_Care_System/templates/updateuserprofile.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/updateuserprofile.css' %}">
     <style>
         body {
-            background: url('{% static "images/updateprof.jpg" %}') no-repeat center center fixed;
+            background: url('{% static "images/updateprofile.jpg" %}') no-repeat center center fixed;
             background-size: cover;
             font-family: Arial, sans-serif;
             margin: 0;
